confidence use model ranks not adj lines

--- a/notebooks/picks/pick-pipeline.ipynb
+++ b/notebooks/picks/pick-pipeline.ipynb
@@ -43,9 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "week = 4\n",
-    "# picker = \"Griffin\"\n",
-    "picker = \"Harry\"\n",
+    "week = 7\n",
+    "picker = \"Griffin\"\n",
+    "# picker = \"Harry\"\n",
     "# picker = \"Chuck\""
    ]
   },
@@ -64,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickers = [\"Griffin\", \"Harry\"]"
+    "pickers = [\"Griffin\", \"Harry\"]\n",
+    "pickers = [\"Griffin\"]"
    ]
   },
   {
@@ -77,50 +78,15 @@
     "    get_power_ratings(week=week, picker=picker)[\"net_perc\"].to_frame().sort_index()\n",
     "    for picker in pickers\n",
     "]\n",
-    "\n",
-    "# power_df = get_power_ratings(week=week, picker=picker)\n",
-    "# power_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "composite = power_dfs[0].copy()\n",
     "for df in power_dfs[1:]:\n",
     "    composite += df\n",
-    "composite = composite / len(power_dfs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "power_dfs.insert(0, composite)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "composite = composite / len(power_dfs)\n",
+    "power_dfs.insert(0, composite)\n",
     "composite_df = pd.concat(power_dfs, axis=1)\n",
     "composite_df.columns = [\"Composite\"] + pickers\n",
     "composite_df = composite_df.sort_values(\"Composite\", ascending=False)\n",
-    "composite_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "composite_rank = composite_df.rank(ascending=False).astype(int)\n",
     "composite_rank = composite_rank.reset_index()\n",
     "composite_rank[\"team\"] = composite_rank[\"team\"].apply(get_logo_url)\n",
