--- a/notebooks/picks/pick-pipeline.ipynb
+++ b/notebooks/picks/pick-pipeline.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "week = 7\n",
+    "week = 10\n",
     "picker = \"Griffin\"\n",
     "# picker = \"Harry\"\n",
     "# picker = \"Chuck\""
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickers = [\"Griffin\", \"Harry\"]\n",
-    "pickers = [\"Griffin\"]"
+    "pickers = [\"Griffin\", \"Harry\", \"Chuck\"]\n",
+    "# pickers = [\"Griffin\"]"
    ]
   },
   {
@@ -128,7 +128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nfl-betting-2oCf1E4A-py3.11",
+   "display_name": "nfl-betting--tcbFQtn-py3.11",
    "language": "python",
    "name": "python3"
   },
