--- a/notebooks/model/01-gr-initial-team-model.ipynb
+++ b/notebooks/model/01-gr-initial-team-model.ipynb
@@ -11,11 +11,16 @@
     "import pandas as pd\n",
     "import polars as pl\n",
     "import polars.selectors as cs\n",
-    "from g_nfl.modelling.metrics import calculate_havoc, calculate_epa_metrics, dual_epa_metrics\n",
+    "from g_nfl.modelling.metrics import (\n",
+    "    calculate_havoc,\n",
+    "    calculate_epa_metrics,\n",
+    "    dual_epa_metrics,\n",
+    ")\n",
     "\n",
     "pl.Config.set_tbl_cols(-1)\n",
     "\n",
     "import jupyter_black\n",
+    "\n",
     "jupyter_black.load()"
    ]
   },
@@ -28,7 +33,9 @@
    "source": [
     "WEEK, SEASON = 9, 2025\n",
     "\n",
-    "pbp: pl.dataframe = nfl.load_pbp(seasons=[2024, 2025])\n",
+    "SEASONS = [2022, 2023, 2024, 2025]\n",
+    "\n",
+    "pbp: pl.dataframe = nfl.load_pbp(seasons=SEASONS)\n",
     "pbp.shape"
    ]
   },
@@ -670,14 +677,410 @@
     "    right_on=[\"season\", \"week\", \"defteam\"],\n",
     "    suffix=\"_def\",\n",
     ")\n",
-    "weekly_combined = weekly_combined.rename({\"posteam\": \"team\"})\n",
+    "weekly_combined: pl.DataFrame = weekly_combined.rename({\"posteam\": \"team\"}).sort(\n",
+    "    \"team\", \"season\", \"week\"\n",
+    ")\n",
     "weekly_combined"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "acdbba56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sched_df: pl.DataFrame = nfl.load_schedules(seasons=SEASONS).filter(\n",
+    "    pl.col(\"game_type\") == \"REG\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bbde2e89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROLLING_WEEKS = 4\n",
+    "\n",
+    "# Add rolling sums\n",
+    "df_rolled = weekly_combined.sort(\"team\", \"season\", \"week\").with_columns(\n",
+    "    cs.exclude(\"team\", \"season\", \"week\")\n",
+    "    .rolling_sum(window_size=ROLLING_WEEKS, min_samples=1)\n",
+    "    .over(\"team\", \"season\")\n",
+    "    .name.suffix(f\"_last_{ROLLING_WEEKS}w\")\n",
+    ")\n",
+    "\n",
+    "# Add cumulative season sums (not total season sum)\n",
+    "df_rolled = df_rolled.with_columns(\n",
+    "    (cs.exclude(\"team\", \"season\", \"week\") - cs.ends_with(f\"_last_{ROLLING_WEEKS}w\"))\n",
+    "    .cum_sum()\n",
+    "    .over(\"team\", \"season\")\n",
+    "    .name.suffix(\"_season\")\n",
+    ")\n",
+    "\n",
+    "# Fill in missing weeks with forward-fill\n",
+    "# Create all possible team/season/week combinations\n",
+    "all_weeks = sched_df.select(\"season\", \"week\").unique()\n",
+    "all_teams = df_rolled.select(\"team\").unique()\n",
+    "all_combinations = all_teams.join(all_weeks, how=\"cross\")\n",
+    "\n",
+    "# Join and forward-fill\n",
+    "df_rolled = (\n",
+    "    all_combinations.join(df_rolled, on=[\"team\", \"season\", \"week\"], how=\"left\")\n",
+    "    .sort(\"team\", \"season\", \"week\")\n",
+    "    .with_columns(\n",
+    "        cs.ends_with((\"_season\", f\"_last_{ROLLING_WEEKS}w\"))\n",
+    "        .forward_fill()\n",
+    "        .over(\"team\", \"season\")\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d73b8b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_rolled.filter([pl.col(\"week\") == 5, pl.col(\"season\") == 2025])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4ae7293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = df_rolled.select(\n",
+    "    \"team\",\n",
+    "    \"season\",\n",
+    "    \"week\",\n",
+    "    cs.ends_with(\"_season\"),\n",
+    "    cs.ends_with(f\"_last_{ROLLING_WEEKS}w\"),\n",
+    ")\n",
+    "away_stats = stats.select(\n",
+    "    pl.col(\"team\").alias(\"away_team\"),\n",
+    "    \"season\",\n",
+    "    \"week\",\n",
+    "    cs.ends_with((\"_season\", f\"_last_{ROLLING_WEEKS}w\")).name.prefix(\"away_\"),\n",
+    ")\n",
+    "\n",
+    "home_stats = stats.select(\n",
+    "    pl.col(\"team\").alias(\"home_team\"),\n",
+    "    \"season\",\n",
+    "    \"week\",\n",
+    "    cs.ends_with((\"_season\", f\"_last_{ROLLING_WEEKS}w\")).name.prefix(\"home_\"),\n",
+    ")\n",
+    "\n",
+    "schedule_with_stats = (\n",
+    "    sched_df.select(\n",
+    "        [\n",
+    "            \"game_id\",\n",
+    "            \"season\",\n",
+    "            \"week\",\n",
+    "            \"away_team\",\n",
+    "            \"home_team\",\n",
+    "            \"result\",\n",
+    "            \"spread_line\",\n",
+    "        ]\n",
+    "    )\n",
+    "    .join(\n",
+    "        away_stats,\n",
+    "        left_on=[\"away_team\", \"season\", pl.col(\"week\") - 1],\n",
+    "        right_on=[\"away_team\", \"season\", \"week\"],\n",
+    "        how=\"left\",\n",
+    "    )\n",
+    "    .drop(\"season_right\", \"week_right\", \"away_team_right\")\n",
+    "    .join(\n",
+    "        home_stats,\n",
+    "        left_on=[\"home_team\", \"season\", pl.col(\"week\") - 1],\n",
+    "        right_on=[\"home_team\", \"season\", \"week\"],\n",
+    "        how=\"left\",\n",
+    "    )\n",
+    "    .drop(\"season_right\", \"week_right\", \"home_team_right\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51e4e601",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schedule_with_stats.filter(\n",
+    "    [pl.col(\"week\") == 9, pl.col(\"season\") == 2025]\n",
+    ").null_count().sum_horizontal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f82bd3a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_schedule_with_stats = schedule_with_stats.filter(\n",
+    "    (pl.col(\"week\") >= 4)\n",
+    "    & ((pl.col(\"season\") < 2025) | ((pl.col(\"season\") == 2025) & (pl.col(\"week\") <= 9)))\n",
+    ")\n",
+    "reduced_schedule_with_stats.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46132370",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_schedule_with_stats.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7f3ab0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deeef962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert reduced_schedule_with_stats.null_count().sum_horizontal().to_list()[0] == 0\n",
+    "\n",
+    "# Prepare data\n",
+    "feature_cols = [\n",
+    "    col\n",
+    "    for col in reduced_schedule_with_stats.columns\n",
+    "    if col\n",
+    "    not in [\n",
+    "        \"game_id\",\n",
+    "        \"season\",\n",
+    "        \"week\",\n",
+    "        \"away_team\",\n",
+    "        \"home_team\",\n",
+    "        \"result\",\n",
+    "        \"spread_line\",\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "# df_model = reduced_schedule_with_stats.drop_nulls()\n",
+    "\n",
+    "# Convert directly to numpy (faster than pandas)\n",
+    "X = reduced_schedule_with_stats.select(feature_cols).to_numpy()\n",
+    "y = reduced_schedule_with_stats.select(\"result\").to_numpy().ravel()\n",
+    "\n",
+    "# Train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bad73432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6674cd76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train model\n",
+    "model = xgb.XGBRegressor(\n",
+    "    n_estimators=100, learning_rate=0.1, max_depth=6, random_state=42\n",
+    ")\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "y_pred_train = model.predict(X_train)\n",
+    "y_pred_test = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate\n",
+    "print(\"Training Performance:\")\n",
+    "print(f\"  RMSE: {np.sqrt(mean_squared_error(y_train, y_pred_train)):.2f}\")\n",
+    "print(f\"  MAE: {mean_absolute_error(y_train, y_pred_train):.2f}\")\n",
+    "\n",
+    "print(\"\\nTest Performance:\")\n",
+    "print(f\"  RMSE: {np.sqrt(mean_squared_error(y_test, y_pred_test)):.2f}\")\n",
+    "print(f\"  MAE: {mean_absolute_error(y_test, y_pred_test):.2f}\")\n",
+    "\n",
+    "# Feature importance\n",
+    "import pandas as pd\n",
+    "\n",
+    "importance_df = pd.DataFrame(\n",
+    "    {\"feature\": feature_cols, \"importance\": model.feature_importances_}\n",
+    ").sort_values(\"importance\", ascending=False)\n",
+    "\n",
+    "print(\"\\nTop 10 Most Important Features:\")\n",
+    "print(importance_df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9514a07e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b48153aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add predictions back to the test set\n",
+    "# First, get the test indices\n",
+    "X_train_idx, X_test_idx = train_test_split(\n",
+    "    np.arange(len(X)), test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Get the test data with predictions\n",
+    "df_test = reduced_schedule_with_stats[X_test_idx].with_columns(\n",
+    "    [pl.lit(y_pred_test).alias(\"predicted_result\")]\n",
+    ")\n",
+    "\n",
+    "# Compare predictions to actual spread lines\n",
+    "comparison = df_test.select(\n",
+    "    [\n",
+    "        \"season\",\n",
+    "        \"week\",\n",
+    "        \"away_team\",\n",
+    "        \"home_team\",\n",
+    "        \"spread_line\",\n",
+    "        \"result\",\n",
+    "        \"predicted_result\",\n",
+    "        (pl.col(\"predicted_result\") - pl.col(\"spread_line\")).alias(\"edge\"),\n",
+    "        (pl.col(\"result\") - pl.col(\"spread_line\")).alias(\"actual_vs_spread\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(comparison.head(20))\n",
+    "\n",
+    "# Summary statistics\n",
+    "print(\"\\nPrediction vs Spread Line Analysis:\")\n",
+    "print(\n",
+    "    f\"Mean absolute edge: {comparison.select(pl.col('edge').abs().mean()).item():.2f}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Correlation between predicted and actual: {np.corrcoef(y_pred_test, y_test)[0,1]:.3f}\"\n",
+    ")\n",
+    "\n",
+    "# How often do we beat the spread when we have an edge?\n",
+    "beat_spread = comparison.with_columns(\n",
+    "    [\n",
+    "        (\n",
+    "            (pl.col(\"predicted_result\") > pl.col(\"spread_line\"))\n",
+    "            & (pl.col(\"result\") > pl.col(\"spread_line\"))\n",
+    "        ).alias(\"correct_over\"),\n",
+    "        (\n",
+    "            (pl.col(\"predicted_result\") < pl.col(\"spread_line\"))\n",
+    "            & (pl.col(\"result\") < pl.col(\"spread_line\"))\n",
+    "        ).alias(\"correct_under\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nBetting Performance:\")\n",
+    "print(f\"Correct overs: {beat_spread.select(pl.col('correct_over').sum()).item()}\")\n",
+    "print(f\"Correct unders: {beat_spread.select(pl.col('correct_under').sum()).item()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26be7c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add predictions back to the test set\n",
+    "X_train_idx, X_test_idx = train_test_split(\n",
+    "    np.arange(len(X)), test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "df_test = reduced_schedule_with_stats[X_test_idx].with_columns(\n",
+    "    [pl.lit(y_pred_test).alias(\"predicted_result\")]\n",
+    ")\n",
+    "\n",
+    "# Compare predictions to spread\n",
+    "comparison = df_test.select(\n",
+    "    [\n",
+    "        \"season\",\n",
+    "        \"week\",\n",
+    "        \"away_team\",\n",
+    "        \"home_team\",\n",
+    "        \"spread_line\",\n",
+    "        \"result\",\n",
+    "        \"predicted_result\",\n",
+    "        (pl.col(\"predicted_result\") - pl.col(\"spread_line\")).alias(\"edge\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Calculate ATS accuracy\n",
+    "# Predicted correctly if both prediction and actual result are on the same side of the spread\n",
+    "ats_accuracy = comparison.with_columns(\n",
+    "    [\n",
+    "        (\n",
+    "            (pl.col(\"predicted_result\") > pl.col(\"spread_line\"))\n",
+    "            == (pl.col(\"result\") > pl.col(\"spread_line\"))\n",
+    "        ).alias(\"correct\")\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "correct_pct = ats_accuracy.select(pl.col(\"correct\").mean()).item() * 100\n",
+    "\n",
+    "print(f\"ATS Accuracy: {correct_pct:.2f}%\")\n",
+    "print(\n",
+    "    f\"Correct picks: {ats_accuracy.select(pl.col('correct').sum()).item()}/{len(ats_accuracy)}\"\n",
+    ")\n",
+    "\n",
+    "# Show some examples\n",
+    "print(\"\\nSample predictions:\")\n",
+    "print(\n",
+    "    ats_accuracy.select(\n",
+    "        [\n",
+    "            \"away_team\",\n",
+    "            \"home_team\",\n",
+    "            \"spread_line\",\n",
+    "            \"result\",\n",
+    "            \"predicted_result\",\n",
+    "            \"edge\",\n",
+    "            \"correct\",\n",
+    "        ]\n",
+    "    ).head(10)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "726e904f",
    "metadata": {},
    "outputs": [],
    "source": []
