update model nb

--- a/notebooks/model/01-gr-initial-team-model.ipynb
+++ b/notebooks/model/01-gr-initial-team-model.ipynb
@@ -33,8 +33,18 @@
    "source": [
     "WEEK, SEASON = 9, 2025\n",
     "\n",
-    "SEASONS = [2022, 2023, 2024, 2025]\n",
-    "\n",
+    "# SEASONS = list(range(2021, SEASON + 1))\n",
+    "SEASONS = [2018, 2019, 2022, 2023, 2024, 2025]\n",
+    "SEASONS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d5a551a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pbp: pl.dataframe = nfl.load_pbp(seasons=SEASONS)\n",
     "pbp.shape"
    ]
@@ -857,11 +867,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8d268e80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_schedule_with_stats.null_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "deeef962",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert reduced_schedule_with_stats.null_count().sum_horizontal().to_list()[0] == 0\n",
+    "assert reduced_schedule_with_stats.null_count().sum_horizontal().item() == 0\n",
     "\n",
     "# Prepare data\n",
     "feature_cols = [\n",
@@ -935,81 +955,17 @@
     "    {\"feature\": feature_cols, \"importance\": model.feature_importances_}\n",
     ").sort_values(\"importance\", ascending=False)\n",
     "\n",
-    "print(\"\\nTop 10 Most Important Features:\")\n",
-    "print(importance_df.head(10))"
+    "importance_df.tail(20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9514a07e",
+   "id": "5f637100",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b48153aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add predictions back to the test set\n",
-    "# First, get the test indices\n",
-    "X_train_idx, X_test_idx = train_test_split(\n",
-    "    np.arange(len(X)), test_size=0.2, random_state=42\n",
-    ")\n",
-    "\n",
-    "# Get the test data with predictions\n",
-    "df_test = reduced_schedule_with_stats[X_test_idx].with_columns(\n",
-    "    [pl.lit(y_pred_test).alias(\"predicted_result\")]\n",
-    ")\n",
-    "\n",
-    "# Compare predictions to actual spread lines\n",
-    "comparison = df_test.select(\n",
-    "    [\n",
-    "        \"season\",\n",
-    "        \"week\",\n",
-    "        \"away_team\",\n",
-    "        \"home_team\",\n",
-    "        \"spread_line\",\n",
-    "        \"result\",\n",
-    "        \"predicted_result\",\n",
-    "        (pl.col(\"predicted_result\") - pl.col(\"spread_line\")).alias(\"edge\"),\n",
-    "        (pl.col(\"result\") - pl.col(\"spread_line\")).alias(\"actual_vs_spread\"),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "print(comparison.head(20))\n",
-    "\n",
-    "# Summary statistics\n",
-    "print(\"\\nPrediction vs Spread Line Analysis:\")\n",
-    "print(\n",
-    "    f\"Mean absolute edge: {comparison.select(pl.col('edge').abs().mean()).item():.2f}\"\n",
-    ")\n",
-    "print(\n",
-    "    f\"Correlation between predicted and actual: {np.corrcoef(y_pred_test, y_test)[0,1]:.3f}\"\n",
-    ")\n",
-    "\n",
-    "# How often do we beat the spread when we have an edge?\n",
-    "beat_spread = comparison.with_columns(\n",
-    "    [\n",
-    "        (\n",
-    "            (pl.col(\"predicted_result\") > pl.col(\"spread_line\"))\n",
-    "            & (pl.col(\"result\") > pl.col(\"spread_line\"))\n",
-    "        ).alias(\"correct_over\"),\n",
-    "        (\n",
-    "            (pl.col(\"predicted_result\") < pl.col(\"spread_line\"))\n",
-    "            & (pl.col(\"result\") < pl.col(\"spread_line\"))\n",
-    "        ).alias(\"correct_under\"),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "print(f\"\\nBetting Performance:\")\n",
-    "print(f\"Correct overs: {beat_spread.select(pl.col('correct_over').sum()).item()}\")\n",
-    "print(f\"Correct unders: {beat_spread.select(pl.col('correct_under').sum()).item()}\")"
+    "importance_df"
    ]
   },
   {
@@ -1024,12 +980,12 @@
     "    np.arange(len(X)), test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "df_test = reduced_schedule_with_stats[X_test_idx].with_columns(\n",
-    "    [pl.lit(y_pred_test).alias(\"predicted_result\")]\n",
+    "df_test: pl.DataFrame = reduced_schedule_with_stats[X_test_idx].with_columns(\n",
+    "    [pl.lit(y_pred_test).round(1).alias(\"model_line\")]\n",
     ")\n",
     "\n",
     "# Compare predictions to spread\n",
-    "comparison = df_test.select(\n",
+    "eval_df = df_test.select(\n",
     "    [\n",
     "        \"season\",\n",
     "        \"week\",\n",
@@ -1037,50 +993,73 @@
     "        \"home_team\",\n",
     "        \"spread_line\",\n",
     "        \"result\",\n",
-    "        \"predicted_result\",\n",
-    "        (pl.col(\"predicted_result\") - pl.col(\"spread_line\")).alias(\"edge\"),\n",
+    "        \"model_line\",\n",
+    "        (pl.col(\"model_line\") - pl.col(\"spread_line\")).abs().round(2).alias(\"diff\"),\n",
     "    ]\n",
-    ")\n",
-    "\n",
-    "# Calculate ATS accuracy\n",
-    "# Predicted correctly if both prediction and actual result are on the same side of the spread\n",
-    "ats_accuracy = comparison.with_columns(\n",
+    ").with_columns(\n",
     "    [\n",
     "        (\n",
-    "            (pl.col(\"predicted_result\") > pl.col(\"spread_line\"))\n",
+    "            (pl.col(\"model_line\") > pl.col(\"spread_line\"))\n",
     "            == (pl.col(\"result\") > pl.col(\"spread_line\"))\n",
     "        ).alias(\"correct\")\n",
     "    ]\n",
     ")\n",
     "\n",
-    "correct_pct = ats_accuracy.select(pl.col(\"correct\").mean()).item() * 100\n",
-    "\n",
-    "print(f\"ATS Accuracy: {correct_pct:.2f}%\")\n",
-    "print(\n",
-    "    f\"Correct picks: {ats_accuracy.select(pl.col('correct').sum()).item()}/{len(ats_accuracy)}\"\n",
-    ")\n",
-    "\n",
-    "# Show some examples\n",
-    "print(\"\\nSample predictions:\")\n",
-    "print(\n",
-    "    ats_accuracy.select(\n",
-    "        [\n",
-    "            \"away_team\",\n",
-    "            \"home_team\",\n",
-    "            \"spread_line\",\n",
-    "            \"result\",\n",
-    "            \"predicted_result\",\n",
-    "            \"edge\",\n",
-    "            \"correct\",\n",
-    "        ]\n",
-    "    ).head(10)\n",
-    ")"
+    "print(f\"ATS Accuracy: {eval_df.select(pl.col('correct').mean()).item() * 100:.2f}%\")\n",
+    "print(f\"Correct picks: {eval_df.select(pl.col('correct').sum()).item()}/{len(eval_df)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26b62eaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_df.select(\n",
+    "    [\n",
+    "        \"away_team\",\n",
+    "        \"home_team\",\n",
+    "        \"spread_line\",\n",
+    "        \"model_line\",\n",
+    "        \"result\",\n",
+    "        \"diff\",\n",
+    "        \"correct\",\n",
+    "    ]\n",
+    ").sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "721ca696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 4\n",
+    "eval_df.filter(pl.col(\"diff\") > k).select(pl.col(\"correct\").mean().round(4)).item()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "726e904f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k in range(1, 20):\n",
+    "    threshold_picks = eval_df.filter(pl.col(\"diff\") > k)\n",
+    "    print(\n",
+    "        k,\n",
+    "        len(threshold_picks),\n",
+    "        threshold_picks.select(pl.col(\"correct\").mean().round(4)).item(),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0186940b",
    "metadata": {},
    "outputs": [],
    "source": []
