Updated model nb

--- a/notebooks/model/01-gr-initial-team-model.ipynb
+++ b/notebooks/model/01-gr-initial-team-model.ipynb
@@ -18,6 +18,7 @@
     ")\n",
     "\n",
     "pl.Config.set_tbl_cols(-1)\n",
+    "pl.Config.set_tbl_rows(32)\n",
     "\n",
     "import jupyter_black\n",
     "\n",
@@ -31,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WEEK, SEASON = 9, 2025\n",
+    "WEEK, SEASON = 10, 2025\n",
     "\n",
     "# SEASONS = list(range(2021, SEASON + 1))\n",
     "SEASONS = [2018, 2019, 2022, 2023, 2024, 2025]\n",
@@ -823,8 +824,20 @@
    "outputs": [],
    "source": [
     "schedule_with_stats.filter(\n",
-    "    [pl.col(\"week\") == 9, pl.col(\"season\") == 2025]\n",
+    "    [pl.col(\"week\") == WEEK, pl.col(\"season\") == 2025]\n",
     ").null_count().sum_horizontal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6174d0bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schedule_with_stats.filter([pl.col(\"week\") == WEEK, pl.col(\"season\") == 2025]).head(\n",
+    "    10\n",
+    ").drop(pl.col(\"result\")).null_count().sum_horizontal()"
    ]
   },
   {
@@ -836,7 +849,10 @@
    "source": [
     "reduced_schedule_with_stats = schedule_with_stats.filter(\n",
     "    (pl.col(\"week\") >= 4)\n",
-    "    & ((pl.col(\"season\") < 2025) | ((pl.col(\"season\") == 2025) & (pl.col(\"week\") <= 9)))\n",
+    "    & (\n",
+    "        (pl.col(\"season\") < 2025)\n",
+    "        | ((pl.col(\"season\") == 2025) & (pl.col(\"week\") <= WEEK))\n",
+    "    )\n",
     ")\n",
     "reduced_schedule_with_stats.head()"
    ]
@@ -867,22 +883,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d268e80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reduced_schedule_with_stats.null_count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "deeef962",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert reduced_schedule_with_stats.null_count().sum_horizontal().item() == 0\n",
-    "\n",
     "# Prepare data\n",
     "feature_cols = [\n",
     "    col\n",
@@ -897,7 +901,16 @@
     "        \"result\",\n",
     "        \"spread_line\",\n",
     "    ]\n",
-    "]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "457643de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# df_model = reduced_schedule_with_stats.drop_nulls()\n",
     "\n",
@@ -930,7 +943,16 @@
    "source": [
     "# Train model\n",
     "model = xgb.XGBRegressor(\n",
-    "    n_estimators=100, learning_rate=0.1, max_depth=6, random_state=42\n",
+    "    n_estimators=500,\n",
+    "    learning_rate=0.05,\n",
+    "    max_depth=4,\n",
+    "    min_child_weight=3,\n",
+    "    subsample=0.8,\n",
+    "    colsample_bytree=0.8,\n",
+    "    colsample_bylevel=0.8,\n",
+    "    reg_alpha=0.1,\n",
+    "    reg_lambda=1.0,\n",
+    "    random_state=42,\n",
     ")\n",
     "\n",
     "model.fit(X_train, y_train)\n",
@@ -966,6 +988,102 @@
    "outputs": [],
    "source": [
     "importance_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc4ce7f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cur_week = reduced_schedule_with_stats.filter(\n",
+    "    (pl.col(\"week\") == WEEK) & (pl.col(\"season\") == SEASON)\n",
+    ")\n",
+    "df_cur_week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d518df7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_cur = df_cur_week.select(feature_cols).to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62b02525",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_cur = model.predict(X_cur)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4b5e061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_cur_res: pl.DataFrame =\n",
+    "df_cur_week.with_columns(\n",
+    "    [\n",
+    "        pl.lit(y_cur).round(1).alias(\"model_line\"),\n",
+    "    ]\n",
+    ").select(\n",
+    "    [\n",
+    "        \"season\",\n",
+    "        \"week\",\n",
+    "        \"away_team\",\n",
+    "        \"home_team\",\n",
+    "        \"spread_line\",\n",
+    "        \"model_line\",\n",
+    "        (pl.col(\"model_line\") - pl.col(\"spread_line\")).abs().round(1).alias(\"diff\"),\n",
+    "    ]\n",
+    ").sort(\"diff\", descending=True).with_columns(\n",
+    "    [\n",
+    "        pl.when(pl.col(\"model_line\") > pl.col(\"spread_line\"))\n",
+    "        .then(pl.col(\"home_team\"))\n",
+    "        .otherwise(pl.col(\"away_team\"))\n",
+    "        .alias(\"pick\")\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e280bcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cur_week.with_columns(\n",
+    "    [\n",
+    "        pl.lit(y_cur).round(1).alias(\"model_line\"),\n",
+    "    ]\n",
+    ").select(\n",
+    "    [\n",
+    "        \"season\",\n",
+    "        \"week\",\n",
+    "        \"away_team\",\n",
+    "        \"home_team\",\n",
+    "        \"spread_line\",\n",
+    "        \"model_line\",\n",
+    "        (pl.col(\"model_line\") - pl.col(\"spread_line\")).abs().round(1).alias(\"diff\"),\n",
+    "    ]\n",
+    ").sort(\"diff\", descending=True).with_columns(\n",
+    "    [\n",
+    "        pl.when(pl.col(\"model_line\") > pl.col(\"spread_line\"))\n",
+    "        .then(pl.col(\"home_team\"))\n",
+    "        .otherwise(pl.col(\"away_team\"))\n",
+    "        .alias(\"pick\")\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
